[package]
name = "rustwave"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RustWave audio codec — encode bytes to WAV, decode WAV to bytes"

[[bin]]
name = "rustwave-cli"
path = "src/main.rs"

[dependencies]
clap    = { version = "4", features = ["derive"] }
hound   = "3"
eframe  = "0.31"
